Archivos de imagen y adelanto

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Encriptador Texto</title>
 </head>
 <body>
 
-    <h1>Hola a todos</h1>
+    <header>
+        <div class="header"> 
+            <img src="logo.png" alt="logo">
+            <h5>Primer Alura Challenge-GustavoVergel</h5>
+        </div>
+        
+    </header>
+
     
+    <!--LADO DERECHO DEL LOGO-->
+
+    <section class="resul">
+        <article>
+            <img src="Muñeco.png" alt="Muñeco">
+        </article>
+    </section>
+
+
+
 </body>
 </html>
